--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,54 @@
-head 
+head {
+    background: radial-gradient(ellipse at top, #e66465, transparent),            radial-gradient(ellipse at bottom, #4d9f0c, transparent);
+    background-color:aliceblue;
+}
+
+h1 {
+  font-size: 50px;  
+  text-align: center;
+  text-transform: uppercase;
+  padding: 50px;
+  padding-bottom: 0%;
+}
+
+body {
+background-color: aliceblue;
+font-family: Arial, Helvetica, sans-serif;
+}
+
+main {
+    padding: 20px;
+    padding-top: 0px;
+}
+
+p {
+    padding: 0px 20px;
+}
+
+h2 {
+    text-decoration: underline;
+}
+
+tr:hover {
+    background-color: azure;
+}
+
+td, th {
+border: 1px solid black;
+padding: 8px;
+padding-top: 12px;
+padding-bottom: 12px;
+}
+
+th {
+    height: 50px;
+    font-size: 17px;
+    text-align: justify;
+    background-color: #e66465;
+    color: white;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100;
+}
